# Lexi-Semantic-Vocabulary-Classifier

./: .gitignore  .gitmessage  CLAUDE.md  LICENSE.txt  Lexi.spec  Lexi_debug.spec  README.md  ROADMAP.md  build_full_categories.py  cli.py  commit-config.json  debug_launcher.py  gui.py  hook-flet.py  hook-nltk.py  hook-wordfreq.py  main.py  pyproject.toml  run_lexi.bat  version.md  使用说明.md  项目描述.md
cli/: __init__.py  classify_cmd.py  config_cmd.py  exercise_cmd.py  plan_cmd.py  story_cmd.py  style_cmd.py
data/: categories_full.json
docs/: GUI_DESIGN.md
gui/: theme.py  widgets.py
gui/pages/: classify_page.py  exercise_page.py  lexicon_page.py  plan_page.py  profile_page.py  reader_tab.py  reading_page.py  reciter_tab.py  review_page.py  story_page.py  vocabulary_page.py
lexi/: __init__.py  classifier.py  cleaner.py  config.py  controller.py  exercises.py  gui_app.py  learned.py  lemmatizer.py  models.py  pipeline.py  pipeline_outputs.py  planner.py  reciter.py  sorter.py  stats.py  story.py  story_prompt.py  style_analyzer.py  styles.py  wordbook.py
tests/: conftest.py  test_classifier.py  test_cleaner.py  test_controller.py  test_exercises.py  test_learned.py  test_lemmatizer.py  test_planner.py  test_sorter.py  test_story.py  test_style_analyzer.py  test_styles.py
