[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lexi"
version = "3.0.0"
description = "Offline multi-label English vocabulary classifier with AI story generation and modern Flet GUI"
requires-python = ">=3.9"
dependencies = [
    "lemminflect",
    "wordfreq",
    "nltk",
    "flet",
]
optional-dependencies = {dev = ["pytest>=7", "pytest-mock>=3"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
